CSS changes: minor, so that participant number shows up aligned on event pages. Index.html: Filtering on events by shifts is now fixed and working. _details changes: html safe on a no break.

--- a/app/assets/stylesheets/dreamsis.css
+++ b/app/assets/stylesheets/dreamsis.css
@@ -4586,6 +4586,7 @@ ul.mentor_stats_summary .section_id.tag {
 .signup-numbers {
 	font-size: 85%;
 	color: #656565;
+	clear: both;
 }
 
 .signup-numbers span {
